hover overflow fix

--- a/css/main.css
+++ b/css/main.css
@@ -161,22 +161,20 @@ width:55%;
 }
 
 .work article {
-float:left;
-width:50%;
-
-}
-
-
-.work img {
-	width: calc(100% - 23px);
+	float: left;
+	width: 48%;
+	margin-right: 1%;
 	margin-top: 20px;
-
-
+}
+.work img {
+	width: 120%;
+	height: auto;
 }
 .work figure {
-	height:100%;
-	overflow:hidden;
-	position:relative;
+	width: 100%;
+	height: 350px;
+	position: relative;
+	overflow: hidden;
 }
 figcaption {
 	position: absolute;
